add graph connectivity test, pass cruscal task

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,13 @@ add_executable(CompetitiveAlgorithms
 
         olymp_functions.hpp
 
-        data_structures/DSU.h tests/dsu_tests.h algorithms/cruscal.h data_structures/graphs.h numeric/factorization.h numeric/eratosphene_sieve.h tests/factorization_tests.h)
+        data_structures/DSU.h tests/dsu_tests.h graphs/cruscal.h data_structures/graphs.h numeric/factorization.h numeric/eratosphene_sieve.h tests/factorization_tests.h graphs/graph_is_connected.h)
 
 
 project(the_task)
 add_executable(the_task
 
         # task_solutions/segment_tree_A.cpp
-        task_solutions/segment_tree_B.cpp
+        # task_solutions/segment_tree_B.cpp
 
-        )
+        task_solutions/cruscal.cpp)
