try to add full task C

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,24 @@ add_executable(CompetitiveAlgorithms
 
         olymp_functions.hpp
 
-        data_structures/DSU.h tests/dsu_tests.h graphs/cruscal.h data_structures/graphs.h numeric/factorization.h numeric/eratosphene_sieve.h tests/factorization_tests.h graphs/graph_is_connected.h geometry/geom_base.h geometry/point_in_polygon.h geometry/polar_angle_sort.h)
+        data_structures/DSU.h
+        tests/dsu_tests.h
+
+        data_structures/graphs.h
+        graphs/cruscal.h
+        graphs/graph_is_connected.h
+
+        numeric/factorization.h
+        numeric/eratosphene_sieve.h
+        tests/factorization_tests.h
+
+
+        geometry/geom_base.h
+        geometry/point_in_polygon.h
+        geometry/polar_angle_sort.h
+        tests/geometry/polar_angle_sorting_test.h
+
+        )
 
 
 project(the_task)
@@ -22,4 +39,6 @@ add_executable(the_task
         # task_solutions/segment_tree_A.cpp
         # task_solutions/segment_tree_B.cpp
 
-        task_solutions/cruscal.cpp tests/geometry/polar_angle_sorting_test.h)
+        # task_solutions/cruscal.cpp
+        task_solutions/geometry/testing_point_in_polygon.cpp
+        )
