--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,8 +35,8 @@ add_executable(CompetitiveAlgorithms
         tests/geometry/test_data.h
 
         geometry/polygon_area.h
-        tests/geometry/area_test.h
-        )
+        tests/geometry/area_and_perimeter_test.h
+        geometry/polygon_perimeter.h)
 
 
 set(CMAKE_CXX_STANDARD 14)
@@ -52,5 +52,7 @@ add_executable(the_task
         # task_solutions/geometry/testing_point_in_polygon.cpp
 
         task_solutions/geometry/geometry_header.h
-        task_solutions/geometry/polygon_area.cpp
+        # task_solutions/geometry/polygon_area.cpp
+        task_solutions/geometry/convex_hull.cpp
+
         )
